--- a/public/static/styles/main.css
+++ b/public/static/styles/main.css
@@ -16,3 +16,15 @@ div.tabs-content.carousel {
     font-size: 1.5rem;
     padding: 10 0 10 0;
 }
+
+.restaurant-column {
+    font-family: cursive;
+}
+
+.table-cell {
+    display: table-cell;
+}
+
+.vertical-middle {
+    vertical-align: middle;
+}
